--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
     "lint": "eslint . --ext js,jsx"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "lenis": "^1.0.42",
     "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8",
-    "tailwindcss": "^3.3.6",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "^4.0.0",
+    "vite": "^5.0.8"
   }
 }
