--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lenis": "^1.0.42",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
