--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "lenis": "^1.0.42",
+    "locomotive-scroll": "^5.0.1",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^2.0.5"
+    "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
